<resources>
    <string name="app_name">MAPD726_GroupProject_Team3_AgriApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string-array name="VegetableCategories">
        <item>Okra Seeds</item>
        <item>Tomato Seeds</item>
        <item>Chilli Seeds</item>
        <item>Cauliflower Seeds</item>
        <item>Eggplant Seeds</item>
        <item>Bottle Gourd Seeds</item>
        <item>Bitter Gourd Seeds</item>
        <item>Broccoli Seeds</item>
        <item>Cucumber Seeds</item>
        <item>All Vegetable Seeds</item>
    </string-array>
    <string-array name="FruitCategories">
        <item>Papaya Seeds</item>
        <item>Watermelon Seeds</item>
        <item>Mango Seeds</item>
        <item>Apple Seeds</item>
        <item>Other Fruit Seeds</item>
    </string-array>
    <string-array name="CropProtection">
        <item>Pesticides</item>
        <item>Fungicides</item>
        <item>Herbicides</item>
    </string-array>
    <string-array name="CropNutrition">
        <item>Plant Growth Promoters</item>
        <item>Fertilizers</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="thankYou">Thank you %1$s, Please Click Continue To Proceed</string>
    <string name="orderMessage">The order confirmation email with details of your order and a link to track its progress has been sent to your email address.</string>
    <string name="order_status">Order Status : %1$s</string>
    <string name="order_date">Order Date : %1$s</string>
    <string name="orderid">Order - %1$s</string>
    <string name="my_text"><u>Our Vision...</u></string>
    <string name="mission"><u>Our Mission...</u></string>
    <string name="contact"><u>Contact Us</u></string>


</resources>